Bug fix: Hover on footer link
Discover the hover colour change isn't working on the link, find I had
made a class but didn't use it but had
a footer style which is now being used on the hover

--- a/assets/media/css/style.css
+++ b/assets/media/css/style.css
@@ -250,7 +250,7 @@ footer a {
 
 /* Highlighting credits link on footer on mouseover */
 
-.credits-anchor:hover {
+footer a:hover {
     color: #FF7700;
 }
 
